fix(files): pass exec an argument array rather than a concatenated string